правки из за ошибок линтера

--- a/source/sass/blocks/main/cooperation.scss
+++ b/source/sass/blocks/main/cooperation.scss
@@ -22,7 +22,7 @@
 
 .cooperation__address {
   margin: 0;
-  font-family: "Arial";
+  font-family: "Arial" sans-serif;
   line-height: 20px;
   width: 139px;
 }
