--- a/source/sass/blocks/main/form.scss
+++ b/source/sass/blocks/main/form.scss
@@ -30,7 +30,7 @@
 
 .form__required-fields-text {
   text-align: center;
-  font-family: 'Arial';
+  font-family: "Arial" sans-serif;
   font-size: 14px;
   line-height: 16px;
   margin: 20px 0 21px;
