--- a/source/sass/blocks/footer/copyright.scss
+++ b/source/sass/blocks/footer/copyright.scss
@@ -12,7 +12,7 @@
 
 .copyright__text {
   align-self: center;
-  font-family: "Arial";
+  font-family: "Arial" sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: $special-dark-gray;
