--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -7,7 +7,7 @@
   text-transform: uppercase;
   color: $special-dark-gray-2;
 
-  &--water{
+  &--water {
     padding-top: 12px;
   }
 }
@@ -17,7 +17,7 @@
   margin: 0;
   border-top: 1px solid $special-gray;
 
-  &:last-child{
+  &:last-child {
     border-bottom: 1px solid $special-gray;
   }
 }
@@ -27,10 +27,10 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 15px;
-  font-family: "Arial";
+  font-family: "Arial" sans-serif;
   line-height: 15px;
 
-  &:nth-child(2){
+  &:nth-child(2) {
     padding-bottom: 14px;
   }
 }
@@ -48,7 +48,7 @@
     padding: 26px 38px 27px;
     border-top: none;
 
-    &:last-child{
+    &:last-child {
       border-bottom: none;
     }
 
@@ -64,7 +64,6 @@
   }
 
   .extra-goods-item__title {
-
     padding: 0;
     font-size: 20px;
     line-height: 20px;
@@ -76,7 +75,7 @@
     line-height: 20px;
     padding-top: 3px;
 
-    &:nth-child(2){
+    &:nth-child(2) {
       padding-bottom: 0;
     }
   }
@@ -87,11 +86,11 @@
     font-size: 16px;
     line-height: 20px;
 
-    &--water-price{
+    &--water-price {
       margin-left: 59px;
     }
 
-    &--vitamins-price{
+    &--vitamins-price {
       margin-left: 51px;
     }
   }
@@ -137,7 +136,7 @@
   .extra-goods-item__value {
     margin: 0;
 
-    &--water-price{
+    &--water-price {
       margin-right: 10px;
     }
   }
