--- a/source/sass/blocks/main/search-form.scss
+++ b/source/sass/blocks/main/search-form.scss
@@ -1,15 +1,15 @@
 .search-form {
   background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
-    url(../img/index-background-mobile.png);
+    url("../img/index-background-mobile.png");
   background-size: auto 302px;
   background-repeat: no-repeat;
   background-position-x: center;
 
-  @media (min-resolution: 2dppx){
+  @media (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
-    url(../img/index-background-mobile@2x.png);
+      url("../img/index-background-mobile@2x.png");
   }
 }
 
@@ -80,7 +80,6 @@
 }
 
 @media (min-width: $desktop-width) {
-
   .search-form__container {
     min-height: 555px;
     padding: 84px 80px;
