--- a/source/sass/blocks/main/special-offer.scss
+++ b/source/sass/blocks/main/special-offer.scss
@@ -1,7 +1,7 @@
 .special-offer {
   background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
-    url(../img/special-offer-background.jpg);
+      url("../img/special-offer-background.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   min-height: 290px;
@@ -11,7 +11,7 @@
   @media (min-resolution: 2dppx){
     background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
-    url(../img/special-offer-background@2x.jpg);
+      url("../img/special-offer-background@2x.jpg");
   }
 }
 
@@ -21,7 +21,7 @@
 }
 
 .special-offer__description {
-  font-family: "Arial";
+  font-family: "Arial" sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -37,15 +37,15 @@
     align-items: center;
     min-height: 200px;
     background-image: linear-gradient(rgba(104, 183, 56, 0.85),
-        rgba(104, 183, 56, 0.85)),
-      url(../img/special-offer-background-tablet.jpg);
+      rgba(104, 183, 56, 0.85)),
+      url("../img/special-offer-background-tablet.jpg");
     background-size: cover;
     margin: 69px 0 76px;
 
-    @media (min-resolution: 2dppx){
+    @media (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(104, 183, 56, 0.85),
         rgba(104, 183, 56, 0.85)),
-      url(../img/special-offer-background-tablet@2x.jpg);
+        url("./img/special-offer-background-tablet@2x.jpg");
     }
   }
 
@@ -64,17 +64,17 @@
 @media (min-width: $desktop-width) {
   .special-offer {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85),
-        rgba(104, 183, 56, 0.85)),
-      url(../img/special-offer-background-desktop.jpg);
+      rgba(104, 183, 56, 0.85)),
+      url("../img/special-offer-background-desktop.jpg");
     background-repeat: no-repeat;
     margin: 0;
     display: flex;
     flex-direction: column;
 
-    @media (min-resolution: 2dppx){
+    @media (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(104, 183, 56, 0.85),
         rgba(104, 183, 56, 0.85)),
-      url(../img/special-offer-background-desktop@2x.jpg);
+        url("../img/special-offer-background-desktop@2x.jpg");
     }
   }
 
