--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,22 +1,22 @@
-$white: #FFFFFF;
-$basic-gray: #F2F2F2;
-$basic-gray-2: #E5E5E5;
-$basic-gray-3: #EAEAEA;
-$basic-gray-4: #E7E7E7;
-$special-gray: #CDCDCD;
-$special-gray-2: #EBEBEB;
-$special-gray-3: #C4C4C4;
+$white: #ffffff;
+$basic-gray: #f2f2f2;
+$basic-gray-2: #e5e5e5;
+$basic-gray-3: #eaeaea;
+$basic-gray-4: #e7e7e7;
+$special-gray: #cdcdcd;
+$special-gray-2: #ebebeb;
+$special-gray-3: #c4c4c4;
 $special-gray-4: #666666;
-$border-gray: #D9D9D9;
-$border-gray-2: #E6E6E6;
-$border-gray-3: #BABABA;
+$border-gray: #d9d9d9;
+$border-gray-2: #e6e6e6;
+$border-gray-3: #bababa;
 $special-dark-gray: #444444;
 $special-dark-gray-2: #222222;
 $another-black: #111111;
 $black: #000000;
-$status-error: #FF8282;
+$status-error: #ff8282;
 $basic-green: #68b738;
-$basic-green-2: #5EAA2F;
+$basic-green-2: #5eaa2f;
 
 $mobile-width-only: 767px;
 $tablet-width: 768px;
