--- a/source/sass/blocks/main/example.scss
+++ b/source/sass/blocks/main/example.scss
@@ -12,7 +12,7 @@
 }
 
 .example__description {
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   color: $special-dark-gray;
   margin: 0 0 20px;
   padding-top: 2px;
