--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -43,7 +43,7 @@
   margin: 0;
   padding: 30px 0 22px;
   color: $special-dark-gray;
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   border-bottom: 1px solid $border-gray;
 }
 
