--- a/source/sass/blocks/main/stats-list.scss
+++ b/source/sass/blocks/main/stats-list.scss
@@ -21,7 +21,7 @@
 }
 
 .stats-list__description {
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 12px;
   line-height: 12px;
   position: absolute;
