--- a/source/sass/blocks/footer/copyright.scss
+++ b/source/sass/blocks/footer/copyright.scss
@@ -12,7 +12,7 @@
 
 .copyright__text {
   align-self: center;
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: $special-dark-gray;
@@ -27,7 +27,6 @@
 }
 
 @media (min-width: $tablet-width) {
-
   .copyright__text {
     margin-right: 24px;
   }
