--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -53,9 +53,10 @@
     &::after {
       content: "";
       position: absolute;
-      background-image: linear-gradient(to left, rgba(104, 183, 56, 0.85),
-          rgba(104, 183, 56, 0.85)),
-        url(../img/index-background-desktop.png);
+      background-image: linear-gradient(to left,
+        rgba(104, 183, 56, 0.85),
+        rgba(104, 183, 56, 0.85)),
+        url("../img/index-background-desktop.png");
       background-repeat: no-repeat;
       background-position-x: right;
       background-size: cover;
@@ -65,9 +66,10 @@
       width: 50%;
 
       @media (min-resolution: 2dppx) {
-        background-image: linear-gradient(to left, rgba(104, 183, 56, 0.85),
-            rgba(104, 183, 56, 0.85)),
-          url(../img/index-background-desktop@2x.png);
+        background-image: linear-gradient(to left,
+          rgba(104, 183, 56, 0.85),
+          rgba(104, 183, 56, 0.85)),
+          url("../img/index-background-desktop@2x.png");
       }
     }
   }
