--- a/source/sass/blocks/main/cooperation.scss
+++ b/source/sass/blocks/main/cooperation.scss
@@ -22,18 +22,18 @@
 
 .cooperation__address {
   margin: 0;
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   line-height: 20px;
   width: 139px;
 }
 
-.cooperation__map-wrapper{
+.cooperation__map-wrapper {
   background-image: url("../img/map-mobile.jpg");
   background-repeat: no-repeat;
   width: 100%;
   height: 362px;
 
-  @media (min-resolution: 2dppx){
+  @media (min-resolution: 2dppx) {
     background-image: url("../img/map-mobile@2x.jpg");
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -68,13 +68,13 @@ iframe {
     gap: 20px;
   }
 
-  .cooperation__map-wrapper{
+  .cooperation__map-wrapper {
     background-image: url("../img/map-tablet.jpg");
     background-repeat: no-repeat;
     width: 100%;
     height: 400px;
 
-    @media (min-resolution: 2dppx){
+    @media (min-resolution: 2dppx) {
       background-image: url("../img/map-tablet@2x.jpg");
       background-repeat: no-repeat;
       background-size: 100% auto;
@@ -105,12 +105,12 @@ iframe {
     text-align: left;
   }
 
-  .cooperation__map-wrapper{
+  .cooperation__map-wrapper {
     background-image: url("../img/map-desktop.jpg");
     background-repeat: no-repeat;
     width: 100%;
 
-    @media (min-resolution: 2dppx){
+    @media (min-resolution: 2dppx) {
       background-image: url("../img/map-desktop@2x.jpg");
       background-repeat: no-repeat;
       background-size: 100% auto;
