--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -27,7 +27,7 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 15px;
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   line-height: 15px;
 
   &:nth-child(2) {
