--- a/source/sass/blocks/main/features.scss
+++ b/source/sass/blocks/main/features.scss
@@ -78,7 +78,7 @@
   margin: 0;
   color: $special-dark-gray;
   padding: 2px 0 4px;
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
 
   &--result {
     br {
