--- a/source/sass/blocks/main/special-offer.scss
+++ b/source/sass/blocks/main/special-offer.scss
@@ -1,14 +1,14 @@
 .special-offer {
   background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
-      url("../img/special-offer-background.jpg");
+    url("../img/special-offer-background.jpg");
   background-repeat: no-repeat;
   background-size: contain;
   min-height: 290px;
   display: grid;
   margin: 35px 0;
 
-  @media (min-resolution: 2dppx){
+  @media (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)),
       url("../img/special-offer-background@2x.jpg");
@@ -21,7 +21,7 @@
 }
 
 .special-offer__description {
-  font-family: "Arial" sans-serif;
+  font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
